fixed overlap issue on index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,7 @@ body {
 .card {
     border: none;
     background-color: transparent;
+    overflow-x: hidden;
 }
 
 .card-title {
@@ -254,3 +255,11 @@ p {
 .heroshadow {
     text-shadow: 2px 2px black;
 }
+
+/* overflow attempt */
+
+.row {
+    --bs-gutter-x: 0 !important;
+    
+}
+
